# serializer version: 1
# name: test_attach_user_transform[False]
  dict({
    '_id': 'bar',
    'user': dict({
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_attach_user_transform[True]
  list([
    dict({
      '_id': 'bar',
      'user': dict({
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
    }),
    dict({
      '_id': 'foo',
      'user': dict({
        'administrator': False,
        'handle': 'zclark',
        'id': 'fb085f7f',
      }),
    }),
    dict({
      '_id': 'baz',
      'user': dict({
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
    }),
  ])
# ---
# name: test_update_keys[False-False-False]
  dict({
    '_id': 'foobar',
    'administrator': False,
    'groups': list([
      'peasants',
      'kings',
    ]),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_update_keys[False-False-True]
  dict({
    '_id': 'foobar',
    'administrator': True,
    'groups': list([
      'peasants',
      'kings',
    ]),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_update_keys[False-True-False]
  dict({
    '_id': 'foobar',
    'administrator': False,
    'groups': list([
      'peasants',
      'kings',
    ]),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_update_keys[False-True-True]
  dict({
    '_id': 'foobar',
    'administrator': True,
    'groups': list([
      'peasants',
      'kings',
    ]),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_update_keys[True-False-False]
  dict({
    '_id': 'foobar',
    'administrator': False,
    'groups': list([
      'peasants',
      'kings',
    ]),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_update_keys[True-False-True]
  dict({
    '_id': 'foobar',
    'administrator': True,
    'groups': list([
      'peasants',
      'kings',
    ]),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_update_keys[True-True-False]
  dict({
    '_id': 'foobar',
    'administrator': False,
    'groups': list([
      'peasants',
      'kings',
    ]),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_update_keys[True-True-True]
  dict({
    '_id': 'foobar',
    'administrator': True,
    'groups': list([
      'peasants',
      'kings',
    ]),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
